Fix quirks in CMake build on Mac and Windows https://bugs.webkit.org/show_bug.cgi?id=147174

Reviewed by Gyuyoung Kim.

.:

* CMakeLists.txt:
* Source/cmake/OptionsWindows.cmake:
Added options I removed in r187022. They are indeed needed.
* Source/cmake/WebKitFS.cmake:
Make the DerivedSources/WebKit directory.

Source/JavaScriptCore:

* PlatformMac.cmake:
Add JSRemoteInspector.cpp and remove semicolon from command to make it actually run.

Source/WebCore:

* PlatformMac.cmake:
Removed files that don't exist any more.
* platform/win/WindowsTouch.h:
Only use definitions of touch structures when compiling with VS2012.

Source/WebKit:

* PlatformMac.cmake:
Fixed syntax, removed files that don't exist any more.

Source/WebKit/win:

* WebView.cpp:
Include winuser.h to get definitions of touch-related structures like tagGESTUREINFO.

Tools:

* CMakeLists.txt:
Don't build DumpRenderTree with CMake for now (until we get that working).
* WinLauncher/CMakeLists.txt:
Renamed WinLauncherLauncher to WinLauncher and WinLauncher to WinLauncherLib to match the Visual Studio build.



Canonical link: https://commits.webkit.org/165235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187161 268f45cc-cd09-0410-ab3c-d52691b4dbfc