Source/JavaScriptCore/PlatformMac.cmake
@@ -12,6 +12,7 @@ list(APPEND JavaScriptCore_SOURCES
     API/JSAPIWrapperObject.mm
     API/JSContext.mm
     API/JSManagedValue.mm
+    API/JSRemoteInspector.cpp
     API/JSStringRefCF.cpp
     API/JSValue.mm
     API/JSVirtualMachine.mm
@@ -29,7 +30,7 @@ add_custom_command(
     OUTPUT ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}/TracingDtrace.h
     DEPENDS ${JAVASCRIPTCORE_DIR}/runtime/Tracing.d
     WORKING_DIRECTORY ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}
-    COMMAND dtrace -h -o "${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}/TracingDtrace.h" -s "${JAVASCRIPTCORE_DIR}/runtime/Tracing.d";
+    COMMAND dtrace -h -o "${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}/TracingDtrace.h" -s "${JAVASCRIPTCORE_DIR}/runtime/Tracing.d"
     VERBATIM)
 
 list(APPEND JavaScriptCore_INCLUDE_DIRECTORIES
