Source/WebCore/PlatformMac.cmake
@@ -188,12 +188,6 @@ list(APPEND WebCore_SOURCES
     platform/graphics/ca/TileGrid.cpp
     platform/graphics/ca/TransformationMatrixCA.cpp
 
-    platform/graphics/ca/mac/LayerFlushSchedulerMac.cpp
-    platform/graphics/ca/mac/PlatformCAAnimationMac.mm
-    platform/graphics/ca/mac/PlatformCAFiltersMac.mm
-    platform/graphics/ca/mac/PlatformCALayerMac.mm
-    platform/graphics/ca/mac/WebTiledBackingLayer.mm
-
     platform/graphics/cg/BitmapImageCG.cpp
     platform/graphics/cg/ColorCG.cpp
     platform/graphics/cg/FloatPointCG.cpp
