Source/WebKit/PlatformMac.cmake
@@ -20,7 +20,7 @@ find_path(PDFKIT_INCLUDE_DIRECTORY PDFKit.h HINTS ${PDFKIT_FRAMEWORK}/Versions/*
 
 if ("${CURRENT_OSX_VERSION}" MATCHES "10.9")
 set(WEBKITSYSTEMINTERFACE_LIBRARY libWebKitSystemInterfaceMavericks.a)
-else if ("${CURRENT_OSX_VERSION}" MATCHES "10.10")
+elif ("${CURRENT_OSX_VERSION}" MATCHES "10.10")
 set(WEBKITSYSTEMINTERFACE_LIBRARY libWebKitSystemInterfaceYosemite.a)
 else ()
 set(WEBKITSYSTEMINTERFACE_LIBRARY libWebKitSystemInterfaceElCapitan.a)
@@ -138,11 +138,9 @@ list(APPEND WebKit_SOURCES
     mac/Misc/WebKitLogging.m
     mac/Misc/WebKitNSStringExtras.mm
     mac/Misc/WebKitStatistics.m
-    mac/Misc/WebKitSystemBits.m
     mac/Misc/WebKitVersionChecks.m
     mac/Misc/WebLocalizableStrings.mm
     mac/Misc/WebLocalizableStringsInternal.mm
-    mac/Misc/WebNSArrayExtras.m
     mac/Misc/WebNSControlExtras.m
     mac/Misc/WebNSDataExtras.m
     mac/Misc/WebNSDictionaryExtras.m
@@ -179,7 +177,6 @@ list(APPEND WebKit_SOURCES
     mac/Plugins/WebPluginDatabase.mm
     mac/Plugins/WebPluginPackage.mm
     mac/Plugins/WebPluginRequest.m
-    mac/Plugins/WebPluginsPrivate.m
     mac/Plugins/npapi.mm
 
     mac/Plugins/Hosted/HostedNetscapePluginStream.mm
@@ -228,7 +225,6 @@ list(APPEND WebKit_SOURCES
     mac/WebCoreSupport/WebSecurityOrigin.mm
     mac/WebCoreSupport/WebSystemInterface.mm
     mac/WebCoreSupport/WebUserMediaClient.mm
-    mac/WebCoreSupport/WebViewGroup.mm
 
     mac/WebInspector/WebInspector.mm
     mac/WebInspector/WebInspectorFrontend.mm
